# go_practice_code

./: BUILD.bazel  Makefile  WORKSPACE
src/: BUILD.bazel  config.go  main.go  myconfig.json
