load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "main.go",
    ],
    importpath = "src/src",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)

go_binary(
    name = "main",
    importpath = "src/src",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "src",
    importpath = "src/src",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
